docs: Update SMTP authorization code to new value

--- a/配置说明.md
+++ b/配置说明.md
@@ -5,7 +5,7 @@
 根据您提供的信息，已配置以下邮箱设置：
 
 - **发件人/收件人邮箱**：2330304961@qq.com
-- **授权码**：gbedglcqrgsydigi
+- **授权码**：bwzqgvsfgehwdjde
 - **SMTP服务器**：smtp.qq.com
 - **SMTP端口**：465（使用SSL）或 587（使用TLS）
 - **使用SSL/TLS**：是
@@ -18,7 +18,7 @@
 SMTP_HOST=smtp.qq.com
 SMTP_PORT=465
 SMTP_USER=2330304961@qq.com
-SMTP_PASS=gbedglcqrgsydigi
+SMTP_PASS=bwzqgvsfgehwdjde
 RECIPIENT_EMAIL=2330304961@qq.com
 ```
 
@@ -31,7 +31,7 @@ RECIPIENT_EMAIL=2330304961@qq.com
 SMTP_HOST=smtp.qq.com
 SMTP_PORT=465
 SMTP_USER=2330304961@qq.com
-SMTP_PASS=gbedglcqrgsydigi
+SMTP_PASS=bwzqgvsfgehwdjde
 RECIPIENT_EMAIL=2330304961@qq.com
 
 # 其他配置
